<resources>
    <string name="app_name" translatable="false">Interval Training</string>
    <string name="app_add_training">Create workout</string>
    <string name="app_add_repetition">Create repetition</string>
    <string name="app_edit_repetition">Edit repetition</string>
    <string name="app_training_list">My workouts</string>
    <string name="app_settings">Settings</string>
    <string name="app_credits" translatable="false">Credits</string>
    <string name="app_backup">Backup</string>
    <string name="app_about" translatable="false">About</string>

    <string name="app_banner_id" translatable="false">REMOVED</string>
    <string name="app_remove_ads" translatable="false">remove_ads</string>
    <!--<string name="app_remove_ads" translatable="false">android.test.purchased</string>-->

    <string name="menu_add">Create workout</string>
    <string name="menu_list">Workout list</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_settings">Settings</string>

    <string name="general_save">Save</string>
    <string name="general_ok">OK</string>
    <string name="general_annulla">Cancel</string>
    <string name="general_edit">Edit</string>
    <string name="general_delete">Delete</string>
    <string name="general_conferma">Confirm</string>
    <string name="general_interrompi">Interrupt</string>
    <string name="general_send_mail">Send mail…</string>

    <string name="training">Workout</string>
    <string name="training_title">Title</string>
    <string name="training_title_hint">Workout</string>
    <string name="training_prepare">Prepare</string>
    <string name="training_work">Work</string>
    <string name="training_rest">Rest</string>
    <string name="training_count">Count</string>
    <string name="training_cooldown">Cooldown</string>
    <string name="training_done">Done</string>
    <string name="training_step" translatable="false">Step</string>
    <string name="training_repetition_type">Repetitions</string>
    <string name="training_repetition_type_single">SINGLE</string>
    <string name="training_repetition_type_multiple">MULTIPLE</string>
    <string name="training_add_repetition">Add Repetition</string>
    <string name="training_list_count_text">Saved workout: %1$d</string>
    <string name="training_created_title">Workout created</string>
    <string name="training_error_not_found">Workout not found</string>
    <string name="training_list_empty_message">There are no workouts</string>
    <string name="training_list_empty_button">ADD A NEW WORKOUT</string>
    <string name="training_main_hint">Select a workout\nor create one now</string>
    <string name="training_delete_repetition_title">Delete</string>
    <string name="training_delete_repetition_content">Delete the repetition?</string>

    <string name="training_default_minute" translatable="false">01</string>
    <string name="training_default_second" translatable="false">30</string>
    <string name="training_divider" translatable="false">:</string>
    <string name="training_default_count" translatable="false">1</string>
    <string name="training_done_time" translatable="false">00:00</string>

    <string name="training_run_interrompi_popup_title">Stop training</string>
    <string name="training_run_interrompi_popup_content">Are you sure you want to stop the workout?</string>
    <string name="training_run_play" translatable="false">Play</string>
    <string name="training_run_pause">Pause</string>
    <string name="training_run_next">Next</string>
    <string name="training_run_prev">Prev</string>
    <string name="training_run_starts_in">Starts in..</string>

    <string name="training_popup_delete_title">Delete workout</string>
    <string name="training_popup_delete_content">Are you sure you want to eliminate the workout?</string>

    <string name="repetition_order_text">%1$d° Rep</string>

    <string name="settings_general">General</string>
    <string name="settings_screen_on">Keep screen on</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_sound_on">Sounds</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_backup" translatable="false">Backup</string>
    <string name="settings_restore">Restore</string>
    <string name="settings_about" translatable="false">About</string>
    <string name="settings_rate">Rate app</string>
    <string name="settings_rate_subtitle">Rate and review this app to the store</string>
    <string name="settings_share">Share app</string>
    <string name="settings_share_subtitle">Share this application with your friends</string>
    <string name="settings_version">Version 1.0</string>
    <string name="settings_contact">Contact us</string>
    <string name="settings_credits" translatable="false">Credits</string>
    <string name="settings_remove_ads">Remove ads</string>

    <string name="backup_title">Backing up your data to Google Drive allows you to restore all your trainings in case you lose or change devices.</string>
    <string name="backup_restore_title">Restore data from Google Drive.</string>
    <string name="backup_button">Back up</string>
    <string name="backup_restore_button">Restore from backup</string>
    <string name="backup_done">Backup completed</string>
    <string name="backup_failed">Backup failed</string>
    <string name="backup_restore_done">Restore from backup completed</string>
    <string name="backup_restore_failed">Restore from backup failed</string>
    <string name="backup_restore_not_found">No backup found</string>
    <string name="backup_connection_failed">Connection failed</string>
    <string name="backup_no_trainings">No saved workout to back up</string>

    <string name="purchase_user_canceled">Purchase procedure canceled</string>
    <string name="purchase_already_owned">Purchase already made.\nThe status of the application has been updated</string>
    <string name="purchase_error">Can not complete purchase</string>

    <string name="share_app_subject" translatable="false">Interval Training</string>
    <string name="share_app_message">Discover Interval Training for your workouts.\nDownload now from http://intervaltraining.altervista.org/</string>

    <string name="credits_json" translatable="false">[{\"title\":\"Feather\",\"name\":\"zsoltherpai\",\"description\":\"Feather is an ultra-lightweight dependency injection (JSR-330) library for Java and Android.\",\"url\": \"https://github.com/zsoltherpai/feather\"},{\"title\":\"Butter Knife\",\"name\":\"JakeWharton\",\"description\":\"Field and method binding for Android views which uses annotation processing to generate boilerplate code for you.\",\"url\": \"https://github.com/JakeWharton/butterknife\"},{\"title\":\"EventBus\",\"name\":\"greenrobot\",\"description\":\"EventBus is a publish/subscribe event bus optimized for Android.\",\"url\": \"https://github.com/greenrobot/EventBus\"},{\"title\":\"Joda-Time\",\"name\":\"JodaOrg\",\"description\":\"Joda-Time provides a quality replacement for the Java date and time classes. The design allows for multiple calendar systems, while still providing a simple API.\",\"url\": \"https://github.com/JodaOrg/joda-time\"},{\"title\":\"Parceler\",\"name\":\"johncarl81\",\"description\":\"Parceler is a code generation library that generates the Android Parcelable boilerplate source code.\",\"url\": \"https://github.com/johncarl81/parceler\"},{\"title\":\"Material Dialogs\",\"name\":\"afollestad\",\"description\":\"Material Dialogs library allows you to use a consistently Material themed dialog on all versions of Android, along with specific customizations that make it easier to brand the dialog.\",\"url\": \"https://github.com/afollestad/material-dialogs\"},{\"title\":\"Number Picker\",\"name\":\"ShawnLin013\",\"description\":\"The android library that provides a simple and customizable NumberPicker. It\'s based on android.widget.NumberPicker.\",\"url\": \"https://github.com/ShawnLin013/NumberPicker\"},{\"title\":\"RoundCornerProgressBar\",\"name\":\"akexorcist\",\"description\":\"Colorful progress bar with round corner on progress which you can customized a color and corner radius.\",\"url\": \"https://github.com/akexorcist/Android-RoundCornerProgressBar\"},{\"title\":\"CircularView\",\"name\":\"JakeWharton\",\"description\":\"A \'Google Fit\'-like implementation of a circular view.\",\"url\": \"https://github.com/rjsvieira/circularView\"},{\"title\":\"freesound\",\"name\":\"\",\"description\":\"Freesound is a collaborative database of Creative Commons Licensed sounds. Browse, download and share sounds.\",\"url\": \"https://freesound.org/\"}]</string>
</resources>
