<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.emperor.intervaltraining.ui.Act_Main">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/menu_add"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_list"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/menu_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/menu_settings"
        app:showAsAction="always" />
</menu>
