<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.Act_Backup">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/standard_mini_dimension"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginBottom="-8dp"
        android:gravity="bottom"
        android:paddingLeft="@dimen/standard_dimension"
        android:paddingRight="@dimen/standard_dimension"
        android:paddingTop="@dimen/standard_dimension"
        android:text="@string/settings_backup"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_dimension"
        android:text="@string/backup_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/standard_less_dimension"
        android:layout_marginRight="@dimen/standard_less_dimension"
        android:layout_marginTop="-8dp">

        <ProgressBar
            android:id="@+id/backup_progress"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />

        <Button
            android:id="@+id/backup"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/backup_button" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginBottom="-8dp"
        android:gravity="bottom"
        android:paddingLeft="@dimen/standard_dimension"
        android:paddingRight="@dimen/standard_dimension"
        android:paddingTop="@dimen/standard_dimension"
        android:text="@string/settings_restore"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_dimension"
        android:text="@string/backup_restore_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/standard_less_dimension"
        android:layout_marginRight="@dimen/standard_less_dimension"
        android:layout_marginTop="-8dp">

        <ProgressBar
            android:id="@+id/restore_progress"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />

        <Button
            android:id="@+id/restore"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/backup_restore_button" />
    </LinearLayout>
</LinearLayout>